# pytest-selenium-automation-framework

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: code_quality.yaml
config/: data.yaml
core_driver/: driver.py  driver_factory.py  driver_options.py  event_listener.py
src/locators/: locators.py
src/pageobjects/: base_page.py
src/pageobjects/text/: fill_form.py
tests/test_fill_form/: test_fill_form.py
utils/: cli.py  crypto.py  driver_management.md  error_handler.py  helpers.py  logger.py
utils/scraper/: chrome_scraper.py  os_checker.py  upload_driver.py
