[tool.poetry]
name = "simple-framework"
version = "0.3.3"
description = "SIMPLE Python selenium framework"
authors = ["Dmytro Berezovskyi"]
readme = "README.md"
packages = [
    { include = "utils" },
    { include = "core_driver" },
    { include = "scraper", from = "utils" },
    { include = "cli.py", from="utils"},
]
[tool.poetry.dependencies]
python = "^3.12"
pytest = "8.3.2"
PyYAML = "^6.0.1"
selenium = "~4.24.0"
webdriver-manager = "4.0.2"
python-dotenv = "1.0.1"
asyncio = "3.4.3"
aioselenium = "0.0.1"
pytest-xdist="3.3.1"
cryptography="44.0.0"
beautifulsoup4="4.12.2"
requests="^2.31.0"
setuptools="70.0.0"
ruff="0.6.8"
secure-test-automation="^1.3.1"
colorama="==0.4.6"
click="==8.1.8"
inquirer = "==2.10.1"

[tool.pytest.ini_options]
addopts = "-rA -v --env=dev --type=local --capture=no -p no:cacheprovider"
markers = [
    { name = "smoke", description = "run smoke tests" },
    { name = "regression", description = "run regression tests" },
    { name = "sanity", description = "run sanity tests" },
    { include = "cli.py", from = "utils" },
]
testpaths = ["tests"]
python_files = ["*.py"]
python_classes = [
    "Test*",
    "*Test*",
    "*Test",
    "*Tests",
    "*Suite"
]
python_functions = ["test_*"]

junit_family = "legacy"
junit_suite_name = "Selenium UI suite"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::pytest.PytestUnknownMarkWarning",
    "ignore::DeprecationWarning",
    "ignore::ResourceWarning",
    "ignore::FutureWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.pytest.config]
type = ["local", "firefox", "remote"]  # Define a custom command line option for driver types as a list
[tool.poetry.scripts]
psaf = "utils.cli:main"